--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   velocity_x: ^3.1.0
   get: ^4.6.5
   image_picker: ^0.8.5+3
+  razorpay_flutter: ^1.3.5
 
 dev_dependencies:
   flutter_test:
